syntax = "proto3";

package worker;

option go_package = "github.com/opensandbox/opensandbox/proto/worker";

service SandboxWorker {
  rpc CreateSandbox(CreateSandboxRequest) returns (CreateSandboxResponse);
  rpc DestroySandbox(DestroySandboxRequest) returns (DestroySandboxResponse);
  rpc GetSandbox(GetSandboxRequest) returns (GetSandboxResponse);
  rpc ListSandboxes(ListSandboxesRequest) returns (ListSandboxesResponse);

  rpc ExecCommand(ExecCommandRequest) returns (ExecCommandResponse);
  rpc ExecCommandStream(ExecCommandRequest) returns (stream ExecOutputChunk);

  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
  rpc WriteFile(WriteFileRequest) returns (WriteFileResponse);
  rpc ListDir(ListDirRequest) returns (ListDirResponse);

  rpc CreatePTY(CreatePTYRequest) returns (CreatePTYResponse);
  rpc PTYStream(stream PTYInput) returns (stream PTYOutput);
}

message CreateSandboxRequest {
  string template = 1;
  int32 timeout = 2;
  map<string, string> envs = 3;
  int32 memory_mb = 4;
  int32 cpu_count = 5;
  bool network_enabled = 6;
}

message CreateSandboxResponse {
  string sandbox_id = 1;
  string status = 2;
}

message DestroySandboxRequest {
  string sandbox_id = 1;
}

message DestroySandboxResponse {}

message GetSandboxRequest {
  string sandbox_id = 1;
}

message GetSandboxResponse {
  string sandbox_id = 1;
  string status = 2;
  string template = 3;
  int64 started_at = 4;
  int64 end_at = 5;
}

message ListSandboxesRequest {}

message ListSandboxesResponse {
  repeated GetSandboxResponse sandboxes = 1;
}

message ExecCommandRequest {
  string sandbox_id = 1;
  string command = 2;
  repeated string args = 3;
  map<string, string> envs = 4;
  string cwd = 5;
  int32 timeout = 6;
}

message ExecCommandResponse {
  int32 exit_code = 1;
  string stdout = 2;
  string stderr = 3;
}

message ExecOutputChunk {
  enum Stream {
    STDOUT = 0;
    STDERR = 1;
  }
  Stream stream = 1;
  bytes data = 2;
}

message ReadFileRequest {
  string sandbox_id = 1;
  string path = 2;
}

message ReadFileResponse {
  bytes content = 1;
}

message WriteFileRequest {
  string sandbox_id = 1;
  string path = 2;
  bytes content = 3;
}

message WriteFileResponse {}

message ListDirRequest {
  string sandbox_id = 1;
  string path = 2;
}

message DirEntry {
  string name = 1;
  bool is_dir = 2;
  int64 size = 3;
  string path = 4;
}

message ListDirResponse {
  repeated DirEntry entries = 1;
}

message CreatePTYRequest {
  string sandbox_id = 1;
  int32 cols = 2;
  int32 rows = 3;
  string shell = 4;
}

message CreatePTYResponse {
  string session_id = 1;
}

message PTYInput {
  string session_id = 1;
  oneof input {
    bytes data = 2;
    PTYResize resize = 3;
  }
}

message PTYResize {
  int32 cols = 1;
  int32 rows = 2;
}

message PTYOutput {
  string session_id = 1;
  bytes data = 2;
}
